# ceo-fraud-llm-benchmark

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
analysis/scripts/: extract_metrics.py
configs/: base.yaml
configs/series_a/: run_a1_rep1.yaml  run_a1_rep2.yaml  run_a1_rep3.yaml  run_a2_rep1.yaml  run_a2_rep2.yaml  run_a2_rep3.yaml  run_a3_rep1.yaml  run_a3_rep2.yaml  run_a3_rep3.yaml  run_a4_rep1.yaml  run_a4_rep2.yaml  run_a4_rep3.yaml  run_a5_rep1.yaml  run_a5_rep2.yaml  run_a5_rep3.yaml
dashboard/: app.py
dashboard/pages/: overview.py  run_explorer.py
paper/: the_ceo_breach.md
prompts/channels/: email.md  internal.md  phone.md  slack.md
prompts/judge/: analysis.md
prompts/system/: attacker.md  ceo.md  comptable.md  dsi.md  rh.md
scripts/: estimate_cost.py  run_experiment.py  run_single.py
src/: paths.py
src/adapters/: base.py  claude_cli.py  codex_cli.py  deepseek_sdk.py  gemini_cli.py  openai_sdk.py  xai_sdk.py
src/agents/: attacker.py  base.py  ceo_profiler.py  defender.py
src/metrics/: channel_analyzer.py  doubt_propagation.py  manipulation_classifier.py  style_matcher.py  trust_tracker.py
tests/: test_adapters.py  test_agents.py  test_channel_analyzer.py  test_cli_adapters.py  test_cli_scripts.py  test_config.py  test_cost_tracker.py  test_dashboard_pages.py  test_doubt_propagation.py  test_end_conditions.py  test_engine.py  test_estimate_cost.py  test_extract_metrics.py  test_logger.py  test_manipulation_classifier.py  test_metrics.py  test_parser.py  test_paths.py  test_router.py  test_style_matcher.py
(+19 files in other folders)
